# optic_planner

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: test.yaml
optic_planner/: CMakeLists.txt  README.md  package.xml
optic_planner/cmake/modules/: FindCbc.cmake
optic_planner/src/optic/: solver-clp.cpp
optic_planner/src/validate/: TypedAnalyser.h
plansys2_optic_plan_solver/: CMakeLists.txt  LICENSE  README.md  package.xml
plansys2_optic_plan_solver/include/plansys2_optic_plan_solver/: CPPLINT.cfg  optic_plan_solver.hpp
plansys2_optic_plan_solver/src/plansys2_optic_plan_solver/: CPPLINT.cfg  optic_plan_solver.cpp
plansys2_optic_plan_solver/test/: CMakeLists.txt
plansys2_optic_plan_solver/test/unit/: optic_test.cpp
src/optic/: solver-clp.h
src/validate/: instantiation.cpp
