<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>optic_planner</name>
  <version>0.0.12</version>
  <description>The OPTIC package</description>
  <maintainer email="kogut@spawar.navy.mil">Greg Kogut</maintainer>
  <license>Creative Commons Zero v1.0 Universal</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>flex</depend>
  <depend>bison</depend>
  <depend>libfl-dev</depend>
  <depend>coinor-libcgl-dev</depend>
  <depend>coinor-libcbc-dev</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>