<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>plansys2_optic_plan_solver</name>
  <version>2.0.0</version>

  <description>This package contains an OPTIC-based PDDL-based planner module for the ROS2 Planning System.</description>

  <maintainer email="kogut@spawar.navy.mil">Greg Kogut</maintainer>

  <license>Creative Commons Zero v1.0 Universal</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>ament_index_cpp</depend>
  <depend>plansys2_core</depend>
  <depend>pluginlib</depend>

  <exec_depend>optic_planner</exec_depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ros2run</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <plansys2_core plugin="${prefix}/plansys2_optic_plan_solver_plugin.xml" />
  </export>
</package>
